@@ -135,11 +135,24 @@
 			<IMG src="img/volcano.png" alt="">{trans("Ticket source:")}
 		</TD>
 		<TD style="width: 99%;">
-                        <SELECT size="1" name="ticket[source]" {tip text="Select ticket source" trigger="source"}>
-                                {foreach $_RT_SOURCES as $sourceidx => $status}
-                                        <OPTION value="{$sourceidx}"{if $ticket.source == $sourceidx}selected {/if}>{$status}</OPTION>
-                                {/foreach}
-                        </SELECT>
+			<SELECT size="1" name="message[source]" {tip text="Select ticket source" trigger="source"}>
+				{foreach $_RT_SOURCES as $sourceidx => $status}
+				<OPTION value="{$sourceidx}"{if $message.source == $sourceidx} selected{/if}>{$status}</OPTION>
+				{/foreach}
+			</SELECT>
+		</TD>
+	</TR>
+	<TR>
+		<TD style="width: 1%;" class="bold nobr">
+			<IMG src="img/report.gif" alt="">
+			{trans("Priority:")}
+		</TD>
+		<TD style="width: 99%;">
+			<SELECT size="1" name="message[priority]" {tip text="Set ticket priority" trigger="priority"}>
+				{foreach $_RT_PRIORITIES as $priorityidx => $priority}
+				<OPTION value="{$priorityidx}"{if $message.priority == $priorityidx} selected{/if}>{$priority}</OPTION>
+				{/foreach}
+			</SELECT>
 		</TD>
 	</TR>
 	<TR>
